# buscheck-collector

./: README.md  deploy.sh  main-gps.py  main.py  pyproject.toml  tasks.md
.claude/skills/commit/: SKILL.md
docs/: RFID collector - (Buscheck).fzz  relatorio-firmware.md  relatorio-server.md  relatório.md  tags.txt
docs/.obsidian/: workspace.json
firmware/: firmware.ino  rfid.ino
firmware/gps/: gps.ino
templates/: index.html
